fix carousel button alignment

--- a/angular-cards/src/app/cards/carousel/carousel.component.scss
+++ b/angular-cards/src/app/cards/carousel/carousel.component.scss
@@ -26,9 +26,11 @@ button {
 /*navigation*/
 #right {
   right: 0;
+  justify-content: center;
 }
 #left {
   left: 0;
+  justify-content: center;
 }
 // mat-icon {
 //   // text-align: center;
